nldl_derive/tests/ui/serializable/derive-on-struct-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/serializable/derive-on-struct-fails.rs:1:28
  |
1 | #[derive(Debug, PartialEq, nldl::attr::Deserialize)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: NetlinkAttributeDeserializable derive may only be used on enums.
