nldl_derive/tests/ui/serializable/derive-on-struct-fails.rs
#[derive(Debug, PartialEq, nldl::attr::Deserialize)]
struct TestStruct {}

fn main() {}
